@@ -8,6 +8,7 @@ buildscript {
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.42.0'
         classpath 'com.palantir.javaformat:gradle-palantir-java-format:2.22.0'
         classpath 'com.palantir.baseline:gradle-baseline-java:4.105.0'
+        classpath 'com.palantir.gradle.conjure:gradle-conjure:5.23.0'
         classpath 'com.palantir.gradle.gitversion:gradle-git-version:0.15.0'
         classpath 'gradle.plugin.org.inferred:gradle-processors:3.6.0'
     }
@@ -52,5 +53,13 @@ subprojects {
         testImplementation 'org.assertj:assertj-core'
         testImplementation 'org.mockito:mockito-core'
         testImplementation 'org.mockito:mockito-junit-jupiter'
+    }
+}
+
+idea.project.ipr {
+    withXml { provider ->
+        provider.node.component
+                .find { it.@name == 'JavacSettings' }
+                .appendNode('option', [name:"ADDITIONAL_OPTIONS_STRING", value:"--enable-preview"])
     }
 }
